--- a/.github/workflows/realease-please.yml
+++ b/.github/workflows/realease-please.yml
@@ -22,4 +22,4 @@ jobs:
           # this is a built-in strategy in release-please, see "Action Inputs"
           # for more options
           release-type: simple
-          config-file: .github/workflows/release-please-config.json
+          manifest-file: .github/workflows/release-please-manifest.json
