ci: refactor to read release type from config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,9 +1,14 @@
 {
-  "extra-files": [
-    {
-      "type": "json",
-      "path": "openapi/openapi.json",
-      "jsonpath": "$.info.version"
-    }
-  ]
+  "packages": {
+    ".": {
+      "release-type": "simple",
+      "extra-files": [
+        {
+          "type": "json",
+          "path": "openapi/openapi.json",
+          "jsonpath": "$.info.version"
+        }
+      ]
+        }
+  }
 }
