--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 fastapi[standard]>=0.115.0,<0.116.0
+gpiozero>=2.0.1,<2.1.0
+pydantic_settings>=2.5.2,<2.6.0
 pydantic>=2.9.0,<2.10.0
+python-dotenv>=1.0.1,<1.1.0
