docs: add config section

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GPIOZERO_PIN_FACTORY=mock
-PROJECT_NAME=swn crew actuators dev
+PROJECT_NAME=swn crew backend
 SOLENOID_GPIO=4,5,6
 PROPORTIONAL_GPIO=10,11
 PUMP_GPIO=20,21,23,24
