docs: Add CAN related instructions

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ DEBUG_LEVEL=DEBUG
 GPIO_MODE=mock
 PROJECT_NAME=swn crew backend
 PROPORTIONAL_GPIO=10,11
+PROPORTIONAL_MODE="GPIO"
 PUMP_GPIO=20,21,23,24
 SOLENOID_GPIO=4,5,6
